--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         </section>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
-        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src=" https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
@@ -50,6 +49,7 @@
             const data = await fetchLivingData().catch(error => {
                 console.log('error', error)
             });
+
             const livingRawData = data.result.records;
             const taipeiDistricts = arrangeTaipeiDistricts(livingRawData)
             setDistrictDropdown(taipeiDistricts);
@@ -107,6 +107,9 @@
             })
             const data = await response.json();
             return data;
+
+
+
         }
 
         function getCurrentSelectDistrict() {
