--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         }
 
         async function fetchLivingData() {
-            const response = await fetch('http://cors.io/?https://od.moi.gov.tw/api/v1/rest/datastore/301000000A-000082-045', {
+            const response = await fetch('https://od.moi.gov.tw/api/v1/rest/datastore/301000000A-000082-045', {
                 method: 'GET',
             })
             const data = await response.json();
