--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
         async function fetchLivingData() {
             const response = await fetch('https://od.moi.gov.tw/api/v1/rest/datastore/301000000A-000082-045', {
                 method: 'GET',
+                headers: new Headers({
+                    'Content-Type': 'application/json'
+                }),
+                mode: 'no-cors'
             })
             const data = await response.json();
             return data;
