--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 mode: 'no-cors'
             })
             const data = await response.json();
+            console.log('data', data);
             return data;
 
 
